--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="aaa">
+    <div class="header">
       <img src="./eisenhower-matrix.jpg">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="top-section-for-adding-element-to-list">
+    <div class="main-element">
+      <p id="add-element">
         <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
+        <div class="form-new-task">
           <input id="new-task" class="task" type="text">
           <button>Add</button>
         </div>
