--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <img src="./eisenhower-matrix.jpg">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="main-element">
+    <div class="main">
       <p id="add-element">
         <label for="new-task">Add Item</label>
         <div class="form-new-task">
