refactor: adjust HTML-formatting according to rule 1.1 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="header">
+    <header class="header">
       <img src="./eisenhower-matrix.jpg">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="main">
-      <p id="add-element">
+    </header>
+    <main class="main">
+      <article id="add-element">
         <label for="new-task">Add Item</label>
         <div class="form-new-task">
           <input id="new-task" class="task" type="text">
           <button>Add</button>
         </div>
-      </p>
+      </article>
       <h3>Todo</h3>
-      <ul id="incomplete-tasks">
-        <li>
+      <article id="incomplete-tasks">
+        <section>
           <input type="checkbox">
           <label class="task">Pay Bills</label>
           <input type="text" class="task">
@@ -27,8 +27,8 @@
           <button class="delete">
             <img src="./remove.svg">
           </button>
-        </li>
-        <li class="edit-mode">
+        </section>
+        <section class="edit-mode">
           <input type="checkbox">
           <label class="task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task">
@@ -36,11 +36,11 @@
           <button class="delete">
             <img src="./remove.svg">
           </button>
-        </li>
-      </ul>
+        </section>
+      </article>
       <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
+      <article id="completed-tasks">
+        <section>
           <input type="checkbox" checked>
           <label class="task">See the Doctor</label>
           <input type="text" class="task">
@@ -48,9 +48,9 @@
           <button class="delete">
             <img src="./remove.svg">
           </button>
-        </li>
-      </ul>
-    </div>
+        </section>
+      </article>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
