--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <main class="main">
       <article id="article_new-task" class="article">
         <label for="form__input">Add Item</label>
-        <form class="form">
+        <div class="form">
           <input id="form__input" class="task" type="text">
           <button>Add</button>
-        </form>
+        </div>
       </article>
       <h3>Todo</h3>
       <article id="article_todo" class="article">
